<resources>
    <string name="app_name">My Music</string>
<!-- Button -->
    <string name="shuffle">Shuffle</string>
    <string name="favourite">Favourite</string>
    <string name="playlist">Playlist</string>
    <string name="total_songs">Total Songs</string>

    <string name="back_button">Back Button</string>
    <string name="empty_favourite">Empty Favourite</string>

    <string name="play_music">Select Music</string>
    <string name="song_name">Song name</string>

    <string name="_00_00">00:00</string>
    <string name="_03_00">03:00</string>

    <string name="repeat_songs">Repeat Songs</string>
    <string name="equalizer_songs">Equalizer Songs</string>
    <string name="share_songs">Share Songs</string>
    <string name="timer_songs">Timer Songs</string>
</resources>